codama-macros/tests/node_attribute/number_type_node_invalid_endian.fail.stderr
error: invalid endian
 --> tests/node_attribute/number_type_node_invalid_endian.fail.rs:3:34
  |
3 | #[node(number_type(u32, endian = invalid))]
  |                                  ^^^^^^^
