codama-macros/tests/node_attribute/number_type_node_invalid_endian.fail.rs
use codama_macros::node;

#[node(number_type(u32, endian = invalid))]
pub struct Foo(usize);

fn main() {}
